--- a/package.json
+++ b/package.json
@@ -21,37 +21,37 @@
     "url": "git+https://github.com/silentbalanceyh/generator-jhipster-string-converter.git"
   },
   "dependencies": {
-    "chalk": "1.1.3",
-    "generator-jhipster": "5.0.0-beta.1",
+    "chalk": "2.4.1",
+    "generator-jhipster": "5.0.2",
     "glob": "^7.1.2",
     "immutable": "^3.8.2",
     "mkdirp": "0.5.1",
-    "semver": "5.3.0",
-    "shelljs": "0.5.3",
+    "semver": "5.5.0",
+    "shelljs": "0.8.2",
     "underscore.string": "^3.3.4",
-    "uuid": "^3.2.1",
-    "yeoman-generator": "1.1.1"
+    "uuid": "^3.3.2",
+    "yeoman-generator": "3.0.0"
   },
   "devDependencies": {
-    "eslint": "3.17.1",
-    "eslint-config-airbnb-base": "11.1.1",
-    "eslint-plugin-import": "2.2.0",
-    "fs-extra": "2.1.2",
+    "eslint": "5.1.0",
+    "eslint-config-airbnb-base": "13.0.0",
+    "eslint-plugin-import": "2.13.0",
+    "fs-extra": "6.0.1",
     "gulp": "3.9.1",
-    "gulp-bump": "2.7.0",
-    "gulp-eslint": "3.0.1",
-    "gulp-exclude-gitignore": "1.1.1",
-    "gulp-git": "2.1.0",
-    "gulp-istanbul": "1.1.1",
-    "gulp-mocha": "3.0.1",
-    "gulp-nsp": "2.4.2",
-    "gulp-plumber": "1.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sequence": "0.4.6",
-    "gulp-shell": "0.6.3",
-    "mocha": "3.2.0",
-    "yeoman-assert": "3.0.0",
-    "yeoman-test": "1.6.0"
+    "gulp-bump": "3.1.1",
+    "gulp-eslint": "5.0.0",
+    "gulp-exclude-gitignore": "1.2.0",
+    "gulp-git": "2.7.0",
+    "gulp-istanbul": "1.1.3",
+    "gulp-mocha": "6.0.0",
+    "gulp-nsp": "3.0.1",
+    "gulp-plumber": "1.2.0",
+    "gulp-rename": "1.3.0",
+    "gulp-sequence": "1.0.0",
+    "gulp-shell": "0.6.5",
+    "mocha": "5.2.0",
+    "yeoman-assert": "3.1.1",
+    "yeoman-test": "1.8.0"
   },
   "scripts": {
     "test": "mocha test/*"
